Country Visit added here

--- a/src/components/Country/Country.css
+++ b/src/components/Country/Country.css
@@ -1,6 +1,6 @@
 
 .country{
-    padding: 2rem;
+    padding: 1rem;
     border: 2px solid brown;
     text-align: center;
     border-radius: 8px;
@@ -11,8 +11,13 @@
     height: 100px;
 }
 
-.country-container {
+.btn-s{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+    margin-bottom: 1rem;
+}
+.visited{
+    background-color: beige;
+    color: black;
 }
